CSS fixes: adjusts max-height on 'About Me' page to auto in order to resolve issue where card wasn't stretching to include content; adjusting CSS on modal for better experience on mobile

--- a/src/components/Carousel/CarouselImage/carouselimage.css
+++ b/src/components/Carousel/CarouselImage/carouselimage.css
@@ -1,5 +1,5 @@
 .carousel-image {
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.1);
   width: 100%;
   height: 100%;
   align-content: center;
