--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ page-content {
   }
 
   .landing-body-detail {
-    max-height: 60%;
+    max-height: auto;
     max-width: 90vw;
   }
 }
